Design fix: Selector logic for default div spacing
Make an update to the selector modification that was made in ce15596fbb9f6c8127a21cb24c028a010cd4c576. Unfortunately, default spacing can only be safely applied to divs that are children of Spine columns.

--- a/build-entry-point.less
+++ b/build-entry-point.less
@@ -94,7 +94,7 @@
  *
  *  Please refer to the linked GitHub project for fully documented, precompiled source code.
  *
- *  @version 1.1.0-rc0.5.17
+ *  @version 1.1.0-rc0.5.18
  *
  *  @link https://github.com/invokeImmediately/WSU-DAESA-CSS
  *  @author Daniel Rieck [daniel.rieck@wsu.edu] (https://github.com/invokeImmediately)
@@ -292,7 +292,7 @@ footer.article-footer {
 
 @oue-div-ruleset: {
     div {
-        .column * + &:not([class*="margined-top"]):not([class*="mt--"]):not([class*="sv--"]) {
+        .column > * + &:not([class*="margined-top"]):not([class*="mt--"]):not([class*="sv--"]) {
             margin-top: extract(@mSize-array, @mSize-1000mx);
         }
     }
